connected to database
added a unique id lib
added text to translation.json
conected HomeTab to database
changed baseUrl at authOperations
fixed bugs with transactions rendering
fixed styles

--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -1,12 +1,11 @@
 {
-  "noTransactionText": "You don't have any transactions yet. Please use add button below to get started.",
+  "noTransactionText": "You don't have transactions yet. Please use add button below to get started.",
   "date": "Date",
   "type": "Type",
   "category": "Category",
   "comment": "Comment",
   "sum": "Sum",
   "balance": "Balance",
-
   "groceries": "Groceries",
   "work": "Work",
   "apartment": "Apartment",
@@ -27,5 +26,14 @@
   "sports": "Sports",
   "hobby": "Hobby",
   "entertainment": "Entertainment",
-  "savings": "Savings"
+  "savings": "Savings",
+  "main": "Main",
+  "food": "Food",
+  "auto": "Auto",
+  "reset": "Reset",
+  "development": "Development",
+  "children": "Children",
+  "house": "House",
+  "income": "Income",
+  "expense": "Expenses"
 }
