--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -1,5 +1,5 @@
 {
-  "noTransactionText": "У вас поки що немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
+  "noTransactionText": "У вас немає жодних транзакцій. Натисніть кнопку Додати щоб розпочати.",
   "date": "Дата",
   "type": "Тип",
   "category": "Категорія",
@@ -27,5 +27,14 @@
   "sports": "Спорт",
   "hobby": "Хоббі",
   "entertainment": "Розваги",
-  "savings": "Заощадження"
+  "savings": "Заощадження",
+  "main": "Головний",
+  "food": "Їжа",
+  "auto": "Авто",
+  "reset": "Перезагрузка?",
+  "development": "Розвиток",
+  "children": "Діти",
+  "house": "Будинок",
+  "income": "Дохід",
+  "expense": "Витрати"
 }
