--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -1,31 +1,39 @@
 {
-  "noTransactionText": "You don't have any transactions yet. Please use add button below to get started.",
-  "date": "Date",
-  "type": "Type",
-  "category": "Category",
-  "comment": "Comment",
-  "sum": "Sum",
-  "balance": "Balance",
-
-  "groceries": "Groceries",
-  "work": "Work",
-  "apartment": "Apartment",
-  "tenats": "Tenants",
-  "transport": "Transport",
-  "farmacy": "Farmacy",
-  "restaurant": "Restaurant",
-  "home": "Home",
-  "other": "Other",
-  "insurance": "Insurance",
-  "medical": "Medical care",
-  "education": "Education",
-  "kids": "Kids",
-  "clothes": "Clothes",
-  "vacation": "Vacation",
-  "investment": "Investment",
-  "gifts": "Gifts",
-  "sports": "Sports",
-  "hobby": "Hobby",
-  "entertainment": "Entertainment",
-  "savings": "Savings"
+	"noTransactionText": "You don't have transactions yet. Please use add button below to get started.",
+	"date": "Date",
+	"type": "Type",
+	"category": "Category",
+	"comment": "Comment",
+	"sum": "Sum",
+	"balance": "Balance",
+	"groceries": "Groceries",
+	"work": "Work",
+	"apartment": "Apartment",
+	"tenats": "Tenants",
+	"transport": "Transport",
+	"farmacy": "Farmacy",
+	"restaurant": "Restaurant",
+	"home": "Home",
+	"other": "Other",
+	"insurance": "Insurance",
+	"medical": "Medical care",
+	"education": "Education",
+	"kids": "Kids",
+	"clothes": "Clothes",
+	"vacation": "Vacation",
+	"investment": "Investment",
+	"gifts": "Gifts",
+	"sports": "Sports",
+	"hobby": "Hobby",
+	"entertainment": "Entertainment",
+	"savings": "Savings",
+	"main": "Main",
+	"food": "Food",
+	"auto": "Auto",
+	"reset": "Reset",
+	"development": "Development",
+	"children": "Children",
+	"house": "House",
+	"income": "Income",
+	"expense": "Expenses"
 }
