add translation to new components

--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -129,5 +129,9 @@
       "e-mail": "E-mail",
       "password": "Password"
     }
+  },
+  "errorPage": {
+    "message": "This page does not exist. Follow link to return to",
+    "home": "Home"
   }
 }
