lang files update

--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -132,6 +132,7 @@
   },
   "errorPage": {
     "message": "This page does not exist. Follow link to return to",
-    "home": "Home"
+    "home": "Home",
+    "alt": "Ops, something is wrong"
   }
 }
