--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -133,6 +133,7 @@
   },
   "errorPage": {
     "message": "Такої сторінуи не існує. Повернутися на ",
-    "home": "Головну"
+    "home": "Головну",
+    "alt": "Нажаль, сталася помилка"
   }
 }
