--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -25,9 +25,11 @@
   "investment": "Вклади",
   "gifts": "Подарунки",
   "sports": "Спорт",
+  "sport": "Спорт",
   "hobby": "Хоббі",
   "entertainment": "Розваги",
   "savings": "Заощадження",
+  "basic": "Базові витрати",
   "main": "Головний",
   "food": "Їжа",
   "auto": "Авто",
@@ -135,5 +137,37 @@
     "message": "Такої сторінуи не існує. Повернутися на ",
     "home": "Головну",
     "alt": "Нажаль, сталася помилка"
+  },
+  "statistics": {
+    "header": "Статистика"
+  },
+  "addtransaction": {
+    "header": {
+      "title": "Додати транзакцію",
+      "income": "Дохід",
+      "expense": "Витрати"
+    },
+    "buttons": {
+      "add": "Додати",
+      "cancel": "Відмінити"
+    },
+    "options": {
+      "main": "Основні",
+      "food": "Їжа",
+      "auto": "Авто",
+      "development": "Розвиток",
+      "children": "Діти",
+      "house": "Будинок",
+      "education": "Освіта",
+      "reset": "Інше"
+    },
+    "notify": {
+      "success": "Операція успішна!",
+      "error": "Сталася помилка. Спробуйте ще раз."
+    },
+    "placeholders": {
+      "comment": "Комментар",
+      "select": "Виберіть категорію"
+    }
   }
 }
