--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -24,9 +24,11 @@
   "investment": "Investment",
   "gifts": "Gifts",
   "sports": "Sports",
+  "sport": "Sport",
   "hobby": "Hobby",
   "entertainment": "Entertainment",
   "savings": "Savings",
+  "basic": "Basic expenses",
   "main": "Main",
   "food": "Food",
   "auto": "Auto",
@@ -134,5 +136,37 @@
     "message": "This page does not exist. Follow link to return to",
     "home": "Home",
     "alt": "Ops, something is wrong"
+  },
+  "statistics": {
+    "header": "Statistics"
+  },
+  "addtransaction": {
+    "header": {
+      "title": "Add transaction",
+      "income": "Income",
+      "expense": "Expense"
+    },
+    "buttons": {
+      "add": "Add",
+      "cancel": "Cancel"
+    },
+    "options": {
+      "main": "Main",
+      "food": "Food",
+      "auto": "Auto",
+      "development": "Development",
+      "children": "Children",
+      "house": "House",
+      "education": "Education",
+      "reset": "Other"
+    },
+    "notify": {
+      "success": "Operation is successful!",
+      "error": "Something went wrong. Please try again."
+    },
+    "placeholders": {
+      "comment": "Comment",
+      "select": "Select category"
+    }
   }
 }
