--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -39,6 +39,7 @@
   "house": "Будинок",
   "income": "Дохід",
   "expense": "Витрати",
+  "salary": "Зарплата",
   "header": {
     "name": "Ім'я",
     "exit": "Вихід"
@@ -174,5 +175,11 @@
       "comment": "Комментар",
       "select": "Виберіть категорію"
     }
+  },
+  "deleteprompt": {
+    "sure": "Ви впевнені?",
+    "irrevertable": "Транзакцію неможливо відновити після видалення",
+    "delete": "Видалити",
+    "cancel": "Відмінити"
   }
 }
