--- a/src/locale/es/translation.json
+++ b/src/locale/es/translation.json
@@ -153,13 +153,16 @@
     },
     "options": {
       "main": "Principal",
+      "basic": "Gastos diarios",
       "food": "Alimento",
       "car": "Auto",
       "products": "Productos",
       "development": "Desarrollo",
       "health": "Salud",
       "children": "Niños",
+      "childrencare": "Salud de los niños",
       "house": "Casa",
+      "household": "Producto doméstico",
       "education": "Educación",
       "laisure": "Vacacion",
       "other": "Otro",
