--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -154,13 +154,16 @@
     },
     "options": {
       "main": "Основні",
+      "basic": "Щоденні витрати",
       "food": "Їжа",
       "car": "Авто",
       "products": "Товари",
       "development": "Розвиток",
       "health": "Здоров'я",
       "children": "Діти",
+      "childrencare": "Здоров'я дітей",
       "house": "Будинок",
+      "household": "Господарські продукти",
       "education": "Освіта",
       "laisure": "Відпочинок",
       "other": "Інше",
