category translation fix

--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -32,6 +32,8 @@
   "main": "Main",
   "food": "Food",
   "auto": "Auto",
+  "car": "Car",
+  "products": "Products",
   "reset": "Reset",
   "development": "Development",
   "children": "Children",
