--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -33,6 +33,8 @@
   "main": "Головний",
   "food": "Їжа",
   "auto": "Авто",
+  "car": "Авто",
+  "products": "Товари",
   "reset": "Перезагрузка?",
   "development": "Розвиток",
   "children": "Діти",
@@ -165,7 +167,7 @@
       "house": "Будинок",
       "household": "Господарські продукти",
       "education": "Освіта",
-      "laisure": "Відпочинок",
+      "leisure": "Відпочинок",
       "other": "Інше",
       "salary": "Зарплата",
       "bonus": "Бонус"
