statistics color fix

--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -162,7 +162,7 @@
       "development": "Development",
       "health": "Self care",
       "children": "Children",
-      "childrencare": "Children care",
+      "childrencare": "Child care",
       "house": "House",
       "household": "Household product",
       "education": "Education",
