--- a/src/locale/en/translation.json
+++ b/src/locale/en/translation.json
@@ -83,7 +83,11 @@
       "sep": "September",
       "oct": "October",
       "nov": "November",
-      "dec": "December"
+      "dec": "December",
+      "19": "2019",
+      "20": "2020",
+      "21": "2021",
+      "22": "2022"
     }
   },
   "table": {
