--- a/src/locale/ua/translation.json
+++ b/src/locale/ua/translation.json
@@ -186,5 +186,11 @@
     "irrevertable": "Транзакцію неможливо відновити після видалення",
     "delete": "Видалити",
     "cancel": "Відмінити"
+  },
+  "exitprompt": {
+    "wallet": "Wallet підтвердження",
+    "confirm": "Справді хочете вийти?",
+    "cancel": "Відміна",
+    "exit": "Вийти"
   }
 }
